bk_ida/gobmkida/c1/connected_to_eye
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/connected_to_eye/src/engine/dragon.c:1753:27: error: use of undeclared identifier 'stones_on_board_stone_count_for_position'
v9 = *( int *)( ( char *)&stones_on_board_stone_count_for_position + v8); 
                          ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/connected_to_eye/src/obj/1/dragon.o] Error 1
